--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="TacoPlaces is a web application \/ web app that locates the best taco places neat you"
+      content="TacoPlaces is a web application that locates the best taco places near you"
     />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
